--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@prisma/client": "^6.15.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-slider": "^1.3.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.85.6",
