--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.15.0",
+		"@radix-ui/react-collapsible": "^1.1.12",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slider": "^1.3.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.8",
@@ -22,6 +26,8 @@
 		"cmdk": "^1.1.1",
 		"lucide-react": "^0.542.0",
 		"next": "15.5.2",
+		"next-themes": "^0.4.6",
+		"nuqs": "^2.5.2",
 		"prisma": "^6.15.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
